--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -5,6 +5,7 @@
 
 
 \input{Sources/Nested/introduction.tex}
+\input{Sources/Nested/overview.tex}
 \input{Sources/Nested/typesystem.mng}
 \input{Sources/Nested/coherence.mng}
 \input{Sources/Nested/algorithm.mng}
