--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,38 +1,9 @@
 % Encoding: UTF-8
 
-@Book{Bringhurst12,
-  title     = {The Elements of Typographic Style},
-  publisher = {Hartley \& Marks Publishers},
-  year      = {2012},
-  author    = {Robert Bringhurst},
-  address   = {Vancouver, British Columbia, Canada},
-  edition   = {4},
-}
-
-@Book{Tufte01,
-  title     = {The visual display of quantitative information},
-  publisher = {Graphics Press},
-  year      = {2001},
-  author    = {Edward R. Tufte},
-  address   = {Chesh\-ire, CT, USA},
-  edition   = {2},
-}
-
-@Book{Tufte90,
-  title     = {Envisioning information},
-  publisher = {Graphics Press},
-  year      = {1990},
-  author    = {Tufte, Edward R.},
-  address   = {Chesh\-ire, CT, USA},
-}
-
-@Comment{jabref-meta: databaseType:bibtex;}
-
-
 @inproceedings{ernst_hoh,
   author    = {Erik Ernst},
   title     = {Higher-Order Hierarchies},
-  booktitle = {ECOOP},
+  booktitle = {European Conference on Object-Oriented Programming},
   year      = {2003},
 }
 
@@ -82,7 +53,7 @@
 	author = {John C. Reynolds},
 	title = {The coherence of languages with intersection types},
   publisher="Springer Berlin Heidelberg",
-	booktitle = {LNCS}
+	booktitle = {Lecture Notes in Computer Science (LNCS)}
 }
 
 @article{Breazu_Tannen_1991,
@@ -122,7 +93,7 @@
 	pages = {157},
 	author = {Jan Schwinghammer},
 	title = {Coherence of subsumption for monadic types},
-	journal = {JFP}
+	journal = {Journal of Functional Programming}
 }
 
 @article{Moggi_1991,
@@ -149,21 +120,21 @@
 	pages = {133--165},
 	author = {Joshua Dunfield},
 	title = {Elaborating intersection and union types},
-	journal = {JFP}
+	journal = {Journal of Functional Programming}
 }
 
 
 @inproceedings{oliveira2016disjoint,
   title={Disjoint intersection types},
   author={Oliveira, Bruno C. d. S. and Shi, Zhiyuan and Alpuim, Jo{\~a}o},
-  booktitle={ICFP},
+  booktitle={International Conference on Functional Programming},
   year={2016}
 }
 
 @inproceedings{alpuimdisjoint,
   title={Disjoint Polymorphism},
   author={Alpuim, Jo{\~a}o and Oliveira, Bruno C. d. S. and Shi, Zhiyuan},
-  booktitle = {ESOP},
+  booktitle = {European Symposium on Programming},
   year={2017}
 }
 
@@ -172,7 +143,7 @@
 	year = 2001,
 	author = {Erik Ernst},
 	title = {Family Polymorphism},
-	booktitle = {ECOOP}
+	booktitle = {European Conference on Object-Oriented Programming}
 }
 
 @article{Corradi_2012,
@@ -192,7 +163,7 @@
 	pages = {931--940},
 	author = {Henk Barendregt and Mario Coppo and Mariangiola Dezani-Ciancaglini},
 	title = {A filter lambda model and the completeness of type assignment },
-	journal = {JSL}
+	journal = {The journal of symbolic logic}
 }
 
 @article{Kurata_1995,
@@ -278,13 +249,13 @@
 	year = 2016,
 	author = {Tiark Rompf and Nada Amin},
 	title = {Type soundness for dependent object types ({DOT})},
-	booktitle = {OOPSLA}
+	booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications}
 }
 
 @inproceedings{amin2012dependent,
   title={Dependent object types},
   author={Amin, Nada and Moors, Adriaan and Odersky, Martin},
-  booktitle={FOOL},
+  booktitle={Workshop on Foundations of Object-Oriented Languages},
   year={2012}
 }
 
@@ -292,7 +263,7 @@
 @inproceedings{bierman2014understanding,
   title={Understanding typescript},
   author={Bierman, Gavin and Abadi, Mart{\'\i}n and Torgersen, Mads},
-  booktitle={ECOOP},
+  booktitle={European Conference on Object-Oriented Programming},
   year={2014},
 }
 
@@ -344,34 +315,34 @@
 	year = 1991,
 	author = {Tim Freeman and Frank Pfenning},
 	title = {Refinement types for {ML}},
-	booktitle = {PLDI}
+	booktitle = {Conference on Programming Language Design and Implementation}
 }
 
 @inproceedings{Davies_2000,
 	year = 2000,
 	author = {Rowan Davies and Frank Pfenning},
 	title = {Intersection types and computational effects},
-	booktitle = {ICFP}
+	booktitle = {International Conference on Functional Programming}
 }
 
 @inproceedings{dunfield2003type,
   title={Type assignment for intersections and unions in call-by-value languages},
   author={Dunfield, Joshua and Pfenning, Frank},
-  booktitle={FoSSaCS},
+  booktitle={Foundations of Software Science and Computation Structure (FoSSaCS)},
   year={2003},
 }
 
 @inproceedings{scharli2003traits,
   title={Traits: Composable units of behaviour},
   author={Sch{\"a}rli, Nathanael and Ducasse, St{\'e}phane and Nierstrasz, Oscar and Black, Andrew P},
-  booktitle={ECOOP},
+  booktitle={European Conference on Object-Oriented Programming},
   year={2003},
 }
 
 @inproceedings{sakkinen1989disciplined,
   title={Disciplined Inheritance.},
   author={Sakkinen, Markku},
-  booktitle={ECOOP},
+  booktitle={European Conference on Object-Oriented Programming},
   year={1989}
 }
 
@@ -388,7 +359,7 @@
 @inproceedings{bracha1990mixin,
   title={Mixin-based inheritance},
   author={Bracha, Gilad and Cook, William R.},
-  booktitle={OOPSLA},
+  booktitle={International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
   year={1990},
 }
 
@@ -396,21 +367,21 @@
 @inproceedings{fisher2004typed,
   title={A typed calculus of traits},
   author={Fisher, Kathleen and Reppy, John},
-  booktitle={FOOL},
+  booktitle={Workshop on Foundations of Object-Oriented Languages},
   year={2004}
 }
 
 @inproceedings{odersky2005scalable,
   title={Scalable component abstractions},
   author={Odersky, Martin and Zenger, Matthias},
-  booktitle={OOPSLA},
+  booktitle={International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
   year={2005},
 }
 
 @article{ducasse2006traits,
   title={Traits: A mechanism for fine-grained reuse},
   author={Ducasse, St{\'e}phane and Nierstrasz, Oscar and Sch{\"a}rli, Nathanael and Wuyts, Roel and Black, Andrew P},
-  journal={TOPLAS},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
   volume={28},
   number={2},
   pages={331--388},
@@ -434,7 +405,7 @@
 @inproceedings{ErnstVirtual,
  author = {Ernst, Erik and Ostermann, Klaus and Cook, William R.},
  title = {A Virtual Class Calculus},
- booktitle = {POPL},
+ booktitle = {Symposium on Principles of Programming Languages},
  year = {2006},
 }
 
@@ -447,7 +418,7 @@
 
 @article{tait,
  author = {W. W. Tait},
- journal = {JSL},
+ journal = {The Journal of symbolic logic},
  number = {2},
  pages = {198-212},
  title = {Intensional Interpretations of Functionals of Finite Type I},
@@ -469,7 +440,7 @@
 	year = 2004,
 	author = {Nathaniel Nystrom and Stephen Chong and Andrew C. Myers},
 	title = {Scalable extensibility via nested inheritance},
-	booktitle = {OOPSLA}
+	booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications}
 }
 
 @inproceedings{reynolds1983types,
@@ -483,14 +454,14 @@
 @inproceedings{oliveira2012extensibility,
   title={Extensibility for the Masses},
   author={Oliveira, Bruno C. d. S. and Cook, William R.},
-  booktitle={ECOOP},
+  booktitle={European Conference on Object-Oriented Programming},
   year={2012},
 }
 
 @inproceedings{oliveira2013feature,
   title={Feature-Oriented programming with object algebras},
   author={Oliveira, Bruno C. d. S. and Van Der Storm, Tijs and Loh, Alex and Cook, William R},
-  booktitle={ECOOP},
+  booktitle={European Conference on Object-Oriented Programming},
   year={2013}
 }
 
@@ -507,7 +478,7 @@
                Angela Schuett and
                Robert van Gent},
   title     = {PolyTOIL: {A} Type-Safe Polymorphic Object-Oriented Language},
-  booktitle = {ECOOP},
+  booktitle = {European Conference on Object-Oriented Programming},
   year      = {1995}
 }
 
@@ -524,7 +495,7 @@ year		= {2007},
 	number = {03},
 	author = {Chieri Saito and Atsushi Igarashi and Mirko Viroli},
 	title = {Lightweight family polymorphism},
-	journal = {JFP}
+	journal = {Journal of Functional Programming}
 }
 
 @inproceedings{saito09matching,
@@ -539,7 +510,7 @@ year		= {2007},
 	year = 1989,
 	author = {O. L. Madsen and B. Moller-Pedersen},
 	title = {Virtual classes: a powerful mechanism in object-oriented programming},
-	booktitle = {OOPSLA}
+	booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications}
 }
 
 @book{LehrmannMadsen:1993:OPB:221048,
@@ -552,7 +523,7 @@ year		= {2007},
 @inproceedings{Nystrom:2006:JNI:1167473.1167476,
  author = {Nystrom, Nathaniel and Qi, Xin and Myers, Andrew C.},
  title = {{J\&: Nested Intersection for Scalable Software Composition}},
- booktitle = {OOPSLA},
+ booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
  year = {2006},
 }
 
@@ -566,7 +537,7 @@ year		= {2007},
 @inproceedings{bruce1995binary,
   title={On binary methods},
   author={Bruce, Kim and Cardelli, Luca and Castagna, Giuseppe and Leavens, Gary T and Pierce, Benjamin and others},
-  booktitle={TAPOS},
+  booktitle={Theory and Practice of Object Systems},
   year={1996},
 }
 
@@ -577,7 +548,7 @@ year		= {2007},
 	pages = {509},
 	author = {Jacques Carette and Oleg Kiselyov and Chung-Chieh Shan},
 	title = {Finally tagless, partially evaluated: Tagless staged interpreters for simpler typed languages},
-	journal = {JFP}
+	journal = {Journal of Functional Programming}
 }
 
 @InProceedings{DBLP:journals/corr/BessaiDDCd15,
@@ -592,13 +563,13 @@ year		= {2007},
 	year = 2017,
 	author = {Yizhou Zhang and Andrew C. Myers},
 	title = {Familia: unifying interfaces, type classes, and family polymorphism},
-  booktitle = {OOPSLA},
+  booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
 }
 
 @inproceedings{Qi:2009:SCF:1542476.1542508,
  author = {Qi, Xin and Myers, Andrew C.},
  title = {Sharing Classes Between Families},
- booktitle = {PLDI},
+ booktitle = {Conference on Programming Language Design and Implementation},
  year = {2009},
 }
 
@@ -606,14 +577,14 @@ year		= {2007},
   title={Simple dependent types: Concord},
   author={Jolly, Paul and Drossopoulou, Sophia and Anderson, Christopher and Ostermann, Klaus},
   year={2004},
-  booktitle = {ECOOP Workshop on Formal Techniques for Java Programs (FTfJP)},
+  booktitle = {European Conference on Object-Oriented Programming Workshop on Formal Techniques for Java Programs (FTfJP)},
 }
 
 @inproceedings{Siek_2015,
 	year = 2015,
 	author = {Jeremy Siek and Peter Thiemann and Philip Wadler},
 	title = {Blame and coercion: together again for the first time},
-	booktitle = {PLDI}
+	booktitle = {Conference on Programming Language Design and Implementation}
 }
 
 @article{Henglein_1994,
@@ -631,7 +602,7 @@ year		= {2007},
 @inproceedings{xuan_traits,
   title={Typed First-Class Traits},
   author={Bi, Xuan and Oliveira, Bruno C. d. S.},
-  booktitle={ECOOP},
+  booktitle={European Conference on Object-Oriented Programming},
   year={2018},
 }
 
