--- a/Thesis.tex
+++ b/Thesis.tex
@@ -112,7 +112,7 @@
 %     {#4}
 % }
 \renewcommand\ottaltinferrule[4]{
-  \inferrule*[narrower=0.5,lab=#1,#2]
+  \inferrule*[narrower=0.7,lab=#1,#2]
     {#3}
     {#4}
 }
@@ -139,6 +139,11 @@
   \include{Sources/Introduction}
   \include{Sources/Background}
   \include{Sources/Nested}
+  \include{Sources/Polymorphism}
+  \include{Sources/Traits}
+  \include{Sources/Category}
+  \include{Sources/Related}
+  \include{Sources/Conclusion}
 
 % This ensures that the subsequent sections are being included as root
 % items in the bookmark structure of your PDF reader.
