--- a/packages.tex
+++ b/packages.tex
@@ -44,7 +44,7 @@
 
 \lstset{%
   backgroundcolor=\color{white},
-  basicstyle=\small\ttfamily,
+  % basicstyle=\ttfamily,
   keywordstyle=\sffamily\bfseries,
   captionpos=none,
   columns=flexible,
