--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -40,6 +40,7 @@
 
 
 \newcommand{\name}{\textsf{NeColus}\xspace}
+\newcommand{\namee}{$\lambda_{i}^{+}$\xspace}
 \newcommand\oname{$\lambda_{i}$\xspace}
 \newcommand\fname{$F_{i}$\xspace}
 \newcommand\tname{$\lambda_{c}$\xspace}
